--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,33 @@
-tmp/*
-config/database.php
-app/tmp/*
-app/config/database.php
-!empty
+.project
+/config/dump.sql
+#/app/tmp/cache/*
+#!/app/tmp/cache/empty
+/app/Vendor/tcpdf/cache/*
+/app/tmp/cache/models/*
+/app/tmp/cache/persistent/*
+/app/tmp/cache/views/*
+!/app/tmp/cache/models/empty
+!/app/tmp/cache/persistent/empty
+!/app/tmp/cache/views/empty
+/app/tmp/logs/*
+!/app/tmp/logs/empty
+/app/tmp/sessions/*
+!/app/tmp/sessions/empty
+/app/tmp/tests/*
+!/app/tmp/tests/empty
+/app/webroot/files/uploads/*
+!/app/webroot/files/uploads/empty
+/app/webroot/img/uploads/*
+!/app/webroot/img/uploads/empty
+/app/webroot/img/uploads/50x50/*
+!/app/webroot/img/uploads/50x50/empty
+/app/webroot/img/uploads/100x100/*
+!/app/webroot/img/uploads/100x100/empty
+/app/webroot/img/uploads/200x200/*
+!/app/webroot/img/uploads/200x200/empty
+/app/webroot/img/uploads/400x400/*
+!/app/webroot/img/uploads/400x400/empty
+/app/webroot/img/uploads/640x480/*
+!/app/webroot/img/uploads/640x480/empty
+/app/webroot/img/uploads/custom/*
+!/app/webroot/img/uploads/custom/empty
